scode/Hammes/prob7/error.txt
  File "/var/www/html/scode/Hammes/prob7/main.py", line 24
    else if(z==2):
         ^^
SyntaxError: expected ':'
